# repo-summary

./: .gitignore  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
src/repo_summary/: __init__.py  cli.py  formatters.py  github.py  gitlab.py  utils.py
